# rung

./: .coderabbit.yaml  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  install.sh  justfile  rustfmt.toml  tarpaulin.toml  test-child.md  verify-fetch.md
.githooks/: pre-commit
.github/: .release-please-manifest-extension.json  PULL_REQUEST_TEMPLATE.md  release-drafter.yml  release-please-config-extension.json
.github/workflows/: ci-extension.yml  ci.yml  codeql.yml  deploy-docs.yml  release-drafter.yml  release-extension.yml  release.yml
Formula/: rung.rb
crates/rung-cli/: Cargo.toml
crates/rung-cli/src/: forge.rs  main.rs  output.rs
crates/rung-cli/src/commands/: absorb.rs  adopt.rs  completions.rs  create.rs  doctor.rs  fold.rs  init.rs  log.rs  merge.rs  mod.rs  navigate.rs  restack.rs  split.rs  status.rs  submit.rs  sync.rs  undo.rs  update.rs  utils.rs
crates/rung-cli/src/services/: absorb.rs  adopt.rs  create.rs  doctor.rs  fold.rs  log.rs  merge.rs  mod.rs  restack.rs  split.rs  status.rs  submit.rs  sync.rs  test_mocks.rs
crates/rung-cli/tests/: integration.rs
crates/rung-core/: Cargo.toml
crates/rung-core/src/: absorb.rs  branch_name.rs  config.rs  error.rs  lib.rs  stack.rs  state.rs  sync.rs  traits.rs
crates/rung-core/src/sync/: execute.rs  mod.rs  plan.rs  predict.rs  reconcile.rs  types.rs  undo.rs
crates/rung-forge/: Cargo.toml
crates/rung-forge/src/: error.rs  lib.rs  remote.rs  repo_id.rs  traits.rs  types.rs
crates/rung-git/: Cargo.toml  build.rs
crates/rung-git/src/: absorb.rs  error.rs  lib.rs  repository.rs  traits.rs
crates/rung-github/: Cargo.toml
crates/rung-github/src/: auth.rs  client.rs  error.rs  lib.rs  traits.rs  types.rs
crates/rung-gitlab/: Cargo.toml  README.md
crates/rung-gitlab/src/: auth.rs  client.rs  lib.rs
docs/: architecture.md  design.md
site/: .prettierignore  astro.config.mjs  package-lock.json  package.json
site/public/: CNAME  install.sh
site/src/: content.config.ts  env.d.ts
site/src/components/: PageTitle.astro  SiteTitle.astro
site/src/content/docs/: index.mdx
site/src/content/docs/commands/: absorb.md  adopt.md  completions.md  create.md  doctor.md  fold.md  index.md  init.md  log.md  merge.md  navigation.md  restack.md  split.md  status.md  submit.md  sync.md  undo.md  update.md
site/src/content/docs/getting-started/: installation.md  quickstart.md
site/src/content/docs/guides/: basic-workflow.md  conflict-resolution.md  stacked-prs.md
site/src/content/docs/reference/: configuration.md  faq.md  troubleshooting.md
site/src/styles/: custom.css
vscode-extension/: .eslintrc.json  .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  test.code-workspace  vitest.config.ts
vscode-extension/src/: extension.ts  types.test.ts  types.ts
vscode-extension/src/commands/: compare.ts  create.ts  index.ts  navigate.ts  submit.ts  sync.ts
vscode-extension/src/providers/: stackTreeItem.test.ts  stackTreeItem.ts  stackTreeProvider.ts  statusBarProvider.ts
vscode-extension/src/rung/: cli.ts
vscode-extension/src/test/__mocks__/: vscode.ts
vscode-extension/src/utils/: debounce.test.ts  debounce.ts  git.ts  workspace.ts
vscode-extension/src/watchers/: fileWatcher.ts  gitWatcher.ts
