[package]
name = "rung-gitlab"
description = "GitLab API integration for Rung - merge request management and CI status"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["gitlab", "api", "merge-request"]
categories = ["development-tools", "api-bindings"]

[dependencies]
rung-forge = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"

[lints]
workspace = true
